Fixing image overflow

--- a/app.css
+++ b/app.css
@@ -4,6 +4,13 @@ ul, ol {
   padding: 0;
 }
 
+.pricing-img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto 20px;
+}
+
 
 body {
 	background-color: #60a9ff;
@@ -25,9 +32,11 @@ html {
 	width: 100%;
 	max-width: 960px;
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	text-align: center;
 	text-transform: uppercase;
+	
+
 }
 
 .pricing-plan {
@@ -56,7 +65,7 @@ html {
 }
 
 .pricing-features-item {
-	font-weight: 600opx;
+	font-weight: 600;
 	letter-spacing: 1px;
 	font-size: 12px;
 	line-height: 1.5;
@@ -98,3 +107,4 @@ html {
 	background-color: #269aff;
 	color:white;
 }
+
